--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "studioscree",
+  "name": "studioscreen",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.4.0",
     "bootstrap": "^4.5.3",
+    "bootstrap-social": "^5.1.1",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-font": "^1.2.1",
@@ -14,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.7.1",
+    "simple-react-lightbox": "^3.5.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
